--- a/S1L05_RWD/Views/Home/Consult.cshtml
+++ b/S1L05_RWD/Views/Home/Consult.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Consult";
 }
 
+<!--Consultations-->
+
 <h2>Book a consultation with your Lecturer.</h2>
 <br/><br/>
 <h3>Your details</h3>
